# Multi-label-Incremental-Learning-for-State-Prediction-of-Actuator-Devices-in-Smart-Homes

./: README.md  pyproject.toml
experiment/: cenarios.py  dto.py  exec_experimento.py  intelligence_incremental.py  parametros.py  separa_rotinas.py  utils.py  validacao.py
experiment/dados/Cenario_validacao_Artigo(1usuarios-casa-mayki)(20_dias)/: db_experimento.csv  db_selecao_hiperparametro.csv
experiment/dados/Grafo_casa-ROTINA_SIMPLES(Dividindo_ap)(20_dias)/: db_experimento.csv  db_selecao_hiperparametro.csv
experiment/dados/Grafo_teste-grupo(3usuarios)(20_dias)/: db_experimento.csv  db_selecao_hiperparametro.csv
experiment/modelo_treinado/: README.md  metricas_por_dia_AMFClassifier.csv  metricas_por_dia_ARFClassifier.csv  metricas_por_dia_ExtremelyFastDecisionTreeClassifier.csv  metricas_por_dia_HoeffdingAdaptiveTreeClassifier.csv  metricas_por_dia_HoeffdingTreeClassifier.csv  metricas_por_dia_KNNClassifier.csv  metricas_por_dia_tudo.csv
notebooks/: calculate_metrics.ipynb  line_graph_plot_by_day.ipynb  set_up_table.ipynb  time_graph_plot.ipynb
