[tool.poetry]
name = "multi-label-incremental-learning-for-state-prediction-of-actuator-devices-in-smart-homes"
version = "0.1.0"
description = ""
authors = ["mayki <maykioliveira@ufba.br>"]
readme = "README.md"
packages = [{include = "experiment"}]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib-inline = "^0.2.1"
pandas = "^2.3.3"
matplotlib = "^3.10.7"
numpy = "^2.3.5"
seaborn = "^0.13.2"
river = "^0.23.0"
joblib = "^1.5.2"
scikit-learn = "^1.7.2"
notebook = "^7.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
